--- a/app/templates/configure/index.html
+++ b/app/templates/configure/index.html
@@ -62,8 +62,8 @@
         {% if game.characters %}
             <div class="select-box">
                 <select id="character-select">
-                    {% for character in game.characters %}
-                        <option value="{{ character.id }}">{{ character.name }}</option>
+                    {% for char in game.characters %}
+                        <option value="{{ char.id }}">{{ char.name }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -74,7 +74,7 @@
             <p class="no-items">(No characters)</p>
         {% endif %}
         <div class="entitylist-container">
-            <a href="/configure/character/new">Add New</a>
+            <a href="/configure/char/new">Add New</a>
         </div>
     </div>
     <script>
