--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -26,9 +26,9 @@
         </div>
         <div id="rate-container" {% if current.growable == "instantly" or current.growable == "not_growable" %}style="display: none;"{% endif %}>
             <label for="rate-amount">Rate:</label>
-            <input type="number" id="rate-amount" name="rate_amount" value="{{ current.timer.rate_amount }}" required>
+            <input type="number" id="rate-amount" name="rate_amount" value="{{ current.progress.rate_amount }}" required>
             <span>per</span>
-            <input type="text" size="6" id="rate-duration" name="rate_duration" value="{{ current.timer.rate_duration }}" required>
+            <input type="text" size="6" id="rate-duration" name="rate_duration" value="{{ current.progress.rate_duration }}" required>
             <span>seconds</span><br>
         </div>
 
