--- a/app/templates/play/location.html
+++ b/app/templates/play/location.html
@@ -19,17 +19,17 @@
     {% endif %}
 
     {% set outerscope = namespace(display_section = false) %}
-    {% for character in location.game_data.characters %}
-        {% if character.location.id == location.id %}
+    {% for char in location.game_data.characters %}
+        {% if char.location.id == location.id %}
             {% set outerscope.display_section = true %}
         {% endif %}
     {% endfor %}
     {% if outerscope.display_section %}
     <h2>Characters</h2>
     <ul>
-        {% for character in location.game_data.characters if character.location.id == location.id %}
+        {% for char in location.game_data.characters if char.location.id == location.id %}
             <li>
-                <a href="{{ url_for('play_character', character_id=character.id) }}">{{ character.name }}</a>
+                <a href="{{ url_for('play_char', char_id=char.id) }}">{{ char.name }}</a>
             </li>
         {% endfor %}
     </ul>
