--- a/app/templates/configure/character.html
+++ b/app/templates/configure/character.html
@@ -19,20 +19,21 @@
     <h1>Character Setup</h1>
     <form method="post">
         <label for="character-name">Name:</label>
-        <input type="text" id="character-name" name="character_name" value="{{ current.name }}" required><br>
+        <input type="text" id="character-name" name="char_name" value="{{ current.name }}" required><br>
         <label for="character-description">Description:</label>
-        <textarea id="character-description" name="character_description" rows="4" cols="50">{{ current.description }}</textarea><br>
+        <textarea id="character-description" name="char_description" rows="4" cols="50">{{ current.description }}</textarea><br>
         <label for="character-type">Type:</label>
-        <select id="character-type-select" name="character_type">
-            <option value="user1">For Player 1</option>
-            <option value="user2">For Player 2</option>
-            <option value="npc">NPC</option>
+        <select id="character-type-select" name="char_type">
+            {% set options = [('user1', 'For Player 1'), ('user2', 'For Player 2'), ('npc', 'NPC')] %}
+            {% for value, text in options %}
+                <option value="{{ value }}" {% if current.char_type == value %}selected{% endif %}>{{ text }}</option>
+            {% endfor %}
         </select><br>
 
         <label for="character-location">Location:</label>
-        <select id="character-location" name="character_location">
+        <select id="character-location" name="char_location">
             <option value="" selected>(Select location)</option>
-            {% for location in game.locations %}
+            {% for location in current.game_data.locations %}
                 <option value="{{ location.id }}" {% if current.location.id == location.id %}selected{% endif %}>
                     {{ location.name }}
                 </option>
@@ -44,11 +45,11 @@
 <!--
         <div id="attributes-container">
             <label for="character-xp">XP:</label>
-            <input type="number" id="character-xp" name="character_xp" value="{{ current.xp }}" class="attribute-field"><br>
+            <input type="number" id="character-xp" name="char_xp" value="{{ current.xp }}" class="attribute-field"><br>
             <label for="character-int">Intelligence:</label>
-            <input type="number" id="character-int" name="character_int" value="{{ current.intelligence }}" class="attribute-field"><br>
+            <input type="number" id="character-int" name="char_int" value="{{ current.intelligence }}" class="attribute-field"><br>
             <label for="character-charisma">Charisma:</label>
-            <input type="number" id="character-charisma" name="character_charisma" value="{{ current.charisma }}" class="attribute-field"><br>
+            <input type="number" id="character-charisma" name="char_charisma" value="{{ current.charisma }}" class="attribute-field"><br>
         </div>
 -->
 
@@ -76,13 +77,15 @@
             </tbody>
         </table>
         <div>
-            {% if game.items %}
+            {% if current.game_data.items %}
                 <!-- Select box for adding another source -->
                 <div class="select-box">
                     <select class="item-select" name="item_select">
                         <option value="" selected>(Select item)</option>
-                        {% for item in game.items %}
-                            <option value="{{ item.id }}">{{ item.name }}</option>
+                        {% for item in current.game_data.items %}
+                            {% if item not in current.items %}
+                                <option value="{{ item.id }}">{{ item.name }}</option>
+                            {% endif %}
                         {% endfor %}
                     </select>
                     <button type="button" class="add-item-btn lesser-button">Add Item</button>
