--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -19,7 +19,8 @@
     <h1>Location Setup</h1>
     <form method="post">
         <label for="location-name">Name:</label>
-        <input type="text" id="location-name" name="location_name" value="{{ current_location.name }}" required><br>
+        <input type="text" id="location-name" name="location_name" value="{{ current_location.name }}" required>
+        ID: {{ current.id }}<br>
         <label for="location-description">Description:</label>
         <textarea id="location-description" name="location_description" rows="4" cols="50">{{ current_location.description }}</textarea><br>
 
